// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdpCyclotronWorkerPlugins onEvent should handle and collect errors 3`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-1>",
      "count": 1,
      "metric_kind": "failure",
      "metric_name": "failed",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-1>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-2>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-2>",
      "message": "Executing plugin intercom",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-2>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-2>",
      "level": "error",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-2>",
      "message": "Plugin errored: Service is down, retry later",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
]
`;

exports[`CdpCyclotronWorkerPlugins smoke tests should run the plugin: { name: 'customer-io', plugin: [Object] } 1`] = `
[
  {
    "level": "debug",
    "message": "Executing plugin customer-io",
  },
  {
    "level": "info",
    "message": "Successfully authenticated with Customer.io. Completing setupPlugin.",
  },
  {
    "level": "debug",
    "message": "Detected email:, test@posthog.com",
  },
  {
    "level": "debug",
    "message": "{"status":{},"email":"test@posthog.com"}",
  },
  {
    "level": "debug",
    "message": "Should customer be tracked:, true",
  },
  {
    "level": "debug",
    "message": "Execution successful",
  },
]
`;

exports[`CdpCyclotronWorkerPlugins smoke tests should run the plugin: { name: 'intercom', plugin: [Object] } 1`] = `
[
  {
    "level": "debug",
    "message": "Executing plugin intercom",
  },
  {
    "level": "info",
    "message": "Contact test@posthog.com in Intercom not found",
  },
  {
    "level": "debug",
    "message": "Execution successful",
  },
]
`;
